# answer-plugin-template

./: .gitignore  README.md  annotation.py  black.sh  build.cython.sh  build.sh  clean.sh  flake8.sh  init-plugin.sh  init.sh  isort.cfg  isort.sh  mypy.sh  pytest.ini  python  setup.cython.py  setup.py  setup_variables.py  uninstall.sh  upgrade.sh
.run/: frontend.run.xml
answer_plugin_template/: __init__.py
answer_plugin_template/plugin/: plugin.py  singleton_plugin.py
answer_plugin_template/translations/: en.yaml  ko.yaml
fe/: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts  vue.config.js
fe/public/: index.html
fe/src/: App.vue  main.ts  shims-recc.d.ts
fe/src/components/: HelloAnswer.vue
fe/src/locales/: en.ts  ko.ts
fe/src/pages/: About.vue  Home.vue
fe/src/plugins/: i18n.ts  vuetify.ts
fe/src/recc/: index.ts  recc.ts
fe/src/router/: index.ts  move.ts
fe/src/store/: index.ts  localStore.ts  sessionStore.ts  storeBase.ts  storeOptions.ts
fe/src/views/: AboutView.vue  HomeView.vue  RootView.vue
fe/tests/unit/: HomeView.spec.ts  setup.ts  (+1 more)
plugin/: MANIFEST.in  README.md  black.sh  clean.sh  flake8.sh  isort.cfg  isort.sh  mypy.sh  project.dic  pytest.ini  requirements.main.txt  setup.cfg  uninstall.sh
plugin/answer_plugin_template/: __init__.py
recc_plugin_annotation/: __init__.py  plugin.py
recc_plugin_annotation/plugin/: plugin.py  singleton_plugin.py
recc_plugin_annotation/translations/: en.yaml
test/plugin/: test_singleton_plugin.py
www/: index.html
www/assets/: AboutView.b3930355.js  index.90c862f0.js
(+8 files in other folders)
